# haskell

./: .gitignore  100prisioners.hs  ack.hs  arithmo-geometric_sequence_solve_proof  arithmo-geometric_sequence_solve_proof.hi  arithmo-geometric_sequence_solve_proof.hs  asciichart  asciichart.hi  asciichart.hs  book.hs  closestpair  closestpair.hi  collatz.hs  concurrent.hs  cont.hs  contravariance.hs  datatypeable.hs  dice.hs  dmr.hs  fact  fact.hi  fact.hs  fibs.hs  flexibleinstances.hs  floyd  floyd.hi  floyd.hs  fsd  fsd.hi  fsd.hs  gadts.hs  grouped_perf.hs  groupedcombinations.hs  gttt.hs  has  has.hi  has.hs  id.hs  intcodeexcerpt.txt  ioMonad.hs  (+48 more)
dice/: dice.hs
guess/: geogebra-export.ggb  guess.hi  guess.hs
h/: h.hs
hex/: .gitmodules  hex.hs  test.hs
hex-seis-proto/: CHANGELOG.md  seis.cabal  seis.hs
hex-seis-proto/failed-seis/: seis.cabal
hex-seis-proto/failed-seis/app/: Main.hs
hex-seis-proto/failed-seis/app/Verse/: Type.hs  Verse.hs
hex-seis-proto/failed-seis/dist-newstyle/cache/: plan.json
kata/: applesoranges.hs  atoms.hs  between2sets.hs  burrowswheelertransformation.hs  deadfish.hs  descendingorder.hs  gimme.hs  kangaroos.hs  main.hs  minmax.hs  part.hs  plusminus.hs  rangeextraction.hs  roundup.hs  secret-min.hs  secret.hs  slide'.hs  slide.hs  soma.hs  staircase.hs  t12tot24.hs  tortoise.hs
optim/: canon  canon.hi  gofun  gofun.hi  optim  optim.hi  range_canon  range_canon.hi  range_canon.hs  range_fold  range_fold.hi  range_fold.hs
parity/: note.txt  parity.hs
permord/: Color.hi  Color.hs  Shut.hi  Shut.hs  permord  permord.hi  (+1 more)
(+122 files in other folders)
