cabal-version:      2.4
name:               seis
version:            0.1.0.0

author:             jrvieira
maintainer:         github@jrvieira.com

extra-source-files: CHANGELOG.md

executable seis
    main-is:        Main.hs
    ghc-options:    -threaded

    -- Modules included in this executable, other than Main.
    other-modules: Zero.Zero
       , Zero.Color
       , Verse.Type
       , Verse.Verse
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
       , containers
    -- , ansi-terminal  -- low level
    -- , vty
       , ansi-terminal-game
    -- , brick  -- brick is UI oriented, built on vty
    -- , gloss  -- OpenGL
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: BangPatterns
       , ImportQualifiedPost
       , TupleSections
       , GADTs
       , StandaloneDeriving
       , ScopedTypeVariables
       , BinaryLiterals
--     , GeneralizedNewtypeDeriving
--     , LexicalNegation
--     , OverloadedLists
--     , OverloadedStrings
       , TypeApplications
       , PartialTypeSignatures
